--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ html
     head
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
+        script(src='/javascripts/jquery-2.1.0.js')
         script(src='/javascripts/client.js')
     body
         form
