--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src='/javascripts/jquery-2.1.0.js')
+        script(src='/javascripts/webrtc.io.js')
         script(src='/javascripts/client.js')
     body
         form
