Use peer.js for client

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,20 +5,15 @@ html
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src='/javascripts/jquery-2.1.0.js')
         script(src='/javascripts/webrtc.io.js')
+        script(src='/javascripts/peer.js')
         script(src='/javascripts/client.js')
     body
         form
             div.left
                 div.log
                     p
-                        span.user Peter
-                        span.text Bla bla bla...
-                        time 00:00
                 div.input
                     input(placeholder='Enter your message here...')
                     button Send
             div.right
                 ul.users
-                    li User 1
-                    li User 2
-                    li User 3
