--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,6 @@
 html, body, form
   height 100%
+  font-family sans-serif
 
 div
   border 1px solid black
@@ -35,9 +36,11 @@ div.log
 
     .user
       padding-right 1em
+      font-weight bold
 
     time
       float right
+      font-size 0.8em
 
 
 div.input
