--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ html,
 body,
 form {
   height: 100%;
+  font-family: sans-serif;
 }
 div {
   border: 1px solid #000;
@@ -36,9 +37,11 @@ div.log p {
 }
 div.log p .user {
   padding-right: 1em;
+  font-weight: bold;
 }
 div.log p time {
   float: right;
+  font-size: 0.8em;
 }
 div.input {
   position: absolute;
