--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,6 +1,7 @@
 html, body, form
   height 100%
   font-family sans-serif
+  overflow hidden
 
 div
   border 1px solid black
@@ -19,7 +20,6 @@ div.right
   top 0
   background-color #ADFF2F
 
-
   ul
     list-style-type none
     padding 1em
@@ -30,6 +30,7 @@ div.log
   top 0
   width 100%
   height calc(100% - 30px)
+  overflow auto
 
   p
     margin 1em
